--- a/package.json
+++ b/package.json
@@ -4,27 +4,36 @@
   "description": "simple but creative game, using Phaser.",
   "main": "index.js",
   "dependencies": {
+    "@babel/runtime": "^7.13.9",
+    "jest-fetch-mock": "^3.0.3",
     "phaser": "^3.53.1",
     "regenerator-runtime": "^0.13.7",
     "webpack": "^5.26.3"
   },
   "devDependencies": {
-    "webpack": "^5.23.0",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
+    "@babel/core": "^7.13.1",
+    "@babel/plugin-transform-runtime": "^7.13.9",
+    "@babel/preset-env": "^7.13.5",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
     "css-loader": "^5.0.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
     "file-loader": "^6.2.0",
+    "jest": "^26.6.3",
+    "jest-canvas-mock": "^2.3.1",
     "style-loader": "^2.0.0",
     "stylelint": "^13.3.3",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^3.17.2"
+    "stylelint-scss": "^3.17.2",
+    "webpack": "^5.23.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "watch": "webpack --watch",
     "start": "webpack serve --mode=development --open",
     "build": "webpack --mode production"
