--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "scripts": {
     "test": "jest",
     "watch": "webpack --watch",
-    "start": "webpack-dev-server --config webpack/base.js --open",
-    "build": "webpack --config webpack/prod.js"
+    "build": "webpack --config webpack/prod.js",
+    "dev": "webpack-dev-server --config webpack/base.js --open"
   },
   "repository": {
     "type": "git",
